src/objects/Match__c.object
<CustomObject>
    <fields>
        <fullName>Current_Time__c</fullName>
        <formula>TIMEVALUE(NOW() + (330/1440))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Is_Warm_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Warm Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_Date__c</fullName>
        <label>Match Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Match_Number__c</fullName>
        <label>Match Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Team_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team 1</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Match</relationshipLabel>
        <relationshipName>Match</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team 2</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Match (Team 2)</relationshipLabel>
        <relationshipName>Match1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Match</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Match_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>Match Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Match</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>